--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -21,6 +21,7 @@ jobs:
       run: |
         pip install -r torch-requirements.txt
         pip install -r requirements.txt
+        pip install httpx
     
     - name: Run tests
       run: python -m unittest discover -s tests -p "test_*.py"
