--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ uvicorn>=0.21.1
 
 # Pillow for image handling
 pillow>=9.5.0
-
+httpx
 # Ultralytics YOLOv8 (includes minimal dependencies)
 ultralytics>=8.0.0
 python-multipart>=0.0.6
