--- a/requirements.txt
+++ b/requirements.txt
@@ -11,4 +11,6 @@ python-multipart>=0.0.6
 pytest==7.4.0
 pytest-cov==4.1.0
 pytest-html==3.2.0
-SQLAlchemy
+sqlalchemy
+psycopg2-binary
+python-dotenv
