--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -4,6 +4,15 @@ on:
   pull_request:
     branches:
       - main
+  push:                      # ← added so Pages can publish on pushes to main
+    branches:
+      - main
+
+# ← required for GitHub Pages
+permissions:
+  contents: write
+  pages: write
+  id-token: write
 
 jobs:
   test:
@@ -60,9 +69,29 @@ jobs:
       - name: Generate Allure report
         run: allure generate allure-results -o allure-report --clean
 
-      # Upload the HTML as an artifact you can download from the run
+      # Keep: artifact you can download from the run
       - name: Upload Allure HTML report
         uses: actions/upload-artifact@v4
         with:
           name: allure-report
           path: allure-report
+
+      # NEW: Upload the report as a Pages artifact (only on push to main)
+      - name: Upload Allure report to GitHub Pages artifact
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: allure-report
+
+  # NEW: Deploy the Pages artifact to GitHub Pages (only on push to main)
+  deploy-pages:
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    needs: test
+    runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
