--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,28 +1,45 @@
 services:
   api:
-    build: .
+    image: ${YOLO_IMAGE}                        
+    pull_policy: always
     ports:
-      - "8080:8080"
-    volumes:
-      - .:/app
+      - "${YOLO_PORT:-8080}:8080"
     env_file:
       - .env
     environment:
-      DATABASE_URL: postgresql+psycopg://postgres:postgres@db:5432/predictions
-
-    command: uvicorn app:app --host 0.0.0.0 --port 8080 --reload
+      - DATABASE_URL=postgresql+psycopg://postgres:postgres@db:5432/predictions
+    volumes:
+      - ./uploads:/app/uploads                   
     depends_on:
-      - db
+      - db            # simple start-order dependency
+    restart: unless-stopped
 
   db:
     image: postgres:15
-    restart: always
+    pull_policy: always
     environment:
-      POSTGRES_DB: predictions
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: ${POSTGRES_DB:-predictions}
+      POSTGRES_USER: ${POSTGRES_USER:-postgres}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB}"]
+      interval: 10s
+      timeout: 5s
+      retries: 10
+    restart: unless-stopped
+
+  ollama-ui:
+    image: ${OLLAMA_UI_IMAGE}                   
+    pull_policy: always
+    ports:
+      - "${OLLAMA_UI_PORT:-3000}:3000"
+    environment:
+      YOLO_SERVICE: http://api:8080            
+    depends_on:
+      - api          # no health condition
+    restart: unless-stopped
 
 volumes:
   postgres_data:
