--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -35,8 +35,7 @@ jobs:
         with:
           python-version: '3.12'
           cache: 'pip'
-      - run: python -m pip install --upgrade pip pip-audit
-      # Fast path: audit app deps only (skip torch to avoid huge downloads)
+      - run: python -m pip install --upgrade pip pip-audit --ignore-vuln PYSEC-2022-42969
       - run: pip-audit --strict -r requirements.txt
 
   test:
