--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -26,7 +26,7 @@ jobs:
           cache: 'pip'
       - run: python -m pip install --upgrade pip pre-commit
       - run: pre-commit run --all-files
-
+  # Ensures code formatting
   audit:
     runs-on: ubuntu-latest
     steps:
@@ -69,7 +69,7 @@ jobs:
             --cov-fail-under=90 \
             --junitxml=junit.xml \
             --alluredir=allure-results
-      - name: Upload coverage to Codecov
+      - name: Upload coverage to Codecov  # We fail the test if codecov coverage is under 90%
         uses: codecov/codecov-action@v3
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
@@ -93,12 +93,11 @@ jobs:
         with:
           name: allure-report
           path: allure-report
-      # NEW: always create the special Pages artifact so deploy-pages can find it
       - name: Upload Pages artifact (Allure HTML)
         uses: actions/upload-pages-artifact@v3
         with:
           path: allure-report
-
+  # We deploy the allure github pages
   deploy-pages:
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     needs: test
